# text-game

./: .copilot-instructions  .dockerignore  .env.example  .gitignore  AGENTS.md  AI_CONTROL.md  ARCHITECTURE.md  BACKLOG.md  BACKLOG_ARCHIVE.md  Dockerfile  Dockerfile.litellm  ENGINEERING_STANDARDS.md  LiteLLM_install.md  README.md  REQUIREMENTS.md  ROADMAP.md  TOOLS.md  docker-compose.gpu.yml  docker-compose.yml  litellm.config.yaml  litellm.local-gpu.config.yaml  package.json  setup_local_a.i.md  sunray_backlog.md  tsconfig.json  tsconfig.server.json
data/: story_sample_walkthrough.json
launcher/: Cargo.toml  README.md  config.rs  env.rs  error.rs  logging.rs  main.rs  process.rs
launcher/assets/: local-ai-walkthrough-matrix.json  local-gpu-profile-matrix.json
launcher/src/: config.rs  env.rs  error.rs  lib.rs  logging.rs  main.rs  process.rs  start_desktop_prototype.rs  start_dev.rs  test_local_ai_workflow.rs  test_setup_browser_smoke.rs  validators.rs
launcher/src/start_dev/: compose.rs  issues.rs  output.rs  preflight.rs  probes.rs  runtime.rs
launcher/tmp/: t68b-live-report.json  t68b-selection-report.json
packaging/: decision-memo.md  electron-builder.json
public/: app.js  app.ts  index.html  styles.css
scripts/: local-gpu-profile-matrix.json  replay-fixture.ts  start-desktop-prototype.ps1  start-dev.ps1  test-local-ai-workflow.ps1  test-setup-browser-smoke.ps1  validate-litellm-default-config.ps1  validate-litellm-embedding-route.ts  validate-litellm-turn-route.ts  validate-local-gpu-profile-matrix.ps1  validate-turn-schema.ts
src/: ai.js  ai.ts  (+18 more)
(+136 files in other folders)
