[package]
name = "sunray"
version = "0.1.0"
edition = "2021"
authors = ["text-game contributors"]
description = "SunRay: Rust launcher and automation harness for text-game."

[[bin]]
name = "SunRay"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
